Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load required libraries\n"
+    "# Load required libraries\n",
+    "import pandas "
    ]
   },
   {
