--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,8 @@
    "outputs": [],
    "source": [
     "# Load required libraries\n",
-    "import pandas "
+    "import pandas as pd\n",
+    "from"
    ]
   },
   {
