--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Load required libraries\n",
     "import pandas as pd\n",
-    "from"
+    "from pandas import "
    ]
   },
   {
