--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "# Load required libraries\n",
     "import pandas as pd\n",
-    "from pandas import tseries"
+    "from pandas import tseries\n",
+    "import"
    ]
   },
   {
