--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
     "# Load required libraries\n",
     "import pandas as pd\n",
     "from pandas import tseries\n",
-    "import"
+    "import matplotlib.pyplot "
    ]
   },
   {
