Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,8 @@
     "# Load required libraries\n",
     "import pandas as pd\n",
     "from pandas import tseries\n",
-    "import matplotlib.pyplot "
+    "import matplotlib.pyplot as plt\n",
+    "import s"
    ]
   },
   {
