Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
     "import pandas as pd\n",
     "from pandas import tseries\n",
     "import matplotlib.pyplot as plt\n",
-    "import s"
+    "import statsmodels.api as sm"
    ]
   },
   {
