Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,9 +79,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/statsmodels/datasets/utils.py:344: FutureWarning: load will return datasets containing pandas DataFrames and Series in the Future.  To suppress this message, specify as_pandas=False\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1958-03-29</td>\n",
+       "      <td>316.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-05</td>\n",
+       "      <td>317.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-12</td>\n",
+       "      <td>317.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-19</td>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-26</td>\n",
+       "      <td>316.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              co2\n",
+       "date             \n",
+       "1958-03-29  316.1\n",
+       "1958-04-05  317.3\n",
+       "1958-04-12  317.6\n",
+       "1958-04-19  317.5\n",
+       "1958-04-26  316.4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the 'co2' dataset from sm.datasets\n",
     "data_set = sm.datasets.co2.load()\n",
