--- a/index.ipynb
+++ b/index.ipynb
@@ -181,14 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 2284 entries, 1958-03-29 to 2001-12-29\n",
+      "Data columns (total 1 columns):\n",
+      "co2    2225 non-null float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 35.7 KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the data type of CO2 \n",
-    "CO2\n",
+    "CO2.info()\n",
     "\n",
     "# Print the first 15 rows of CO2\n"
    ]
