Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,9 +201,10 @@
    ],
    "source": [
     "# Print the data type of CO2 \n",
-    "CO2.info()\n",
+    "print(CO2.info())\n",
     "\n",
-    "# Print the first 15 rows of CO2\n"
+    "# Print the first 15 rows of CO2\n",
+    "CO"
    ]
   },
   {
