--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -195,8 +195,126 @@
       "Data columns (total 1 columns):\n",
       "co2    2225 non-null float64\n",
       "dtypes: float64(1)\n",
-      "memory usage: 35.7 KB\n"
+      "memory usage: 35.7 KB\n",
+      "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1958-03-29</td>\n",
+       "      <td>316.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-05</td>\n",
+       "      <td>317.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-12</td>\n",
+       "      <td>317.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-19</td>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-04-26</td>\n",
+       "      <td>316.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-05-03</td>\n",
+       "      <td>316.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-05-10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-05-17</td>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-05-24</td>\n",
+       "      <td>317.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-05-31</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-06-07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-06-14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-06-21</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-06-28</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1958-07-05</td>\n",
+       "      <td>315.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              co2\n",
+       "date             \n",
+       "1958-03-29  316.1\n",
+       "1958-04-05  317.3\n",
+       "1958-04-12  317.6\n",
+       "1958-04-19  317.5\n",
+       "1958-04-26  316.4\n",
+       "1958-05-03  316.9\n",
+       "1958-05-10    NaN\n",
+       "1958-05-17  317.5\n",
+       "1958-05-24  317.9\n",
+       "1958-05-31    NaN\n",
+       "1958-06-07    NaN\n",
+       "1958-06-14    NaN\n",
+       "1958-06-21    NaN\n",
+       "1958-06-28    NaN\n",
+       "1958-07-05  315.8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -204,7 +322,7 @@
     "print(CO2.info())\n",
     "\n",
     "# Print the first 15 rows of CO2\n",
-    "CO"
+    "CO2.head(15)"
    ]
   },
   {
