--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -344,7 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Confirm that date values are used for indexing purpose in the CO2 dataset \n"
+    "# Confirm that date values are used for indexing purpose in the CO2 dataset \n",
+    "CO2."
    ]
   },
   {
