Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,12 +340,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
+       "               '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
+       "               '1958-05-24', '1958-05-31',\n",
+       "               ...\n",
+       "               '2001-10-27', '2001-11-03', '2001-11-10', '2001-11-17',\n",
+       "               '2001-11-24', '2001-12-01', '2001-12-08', '2001-12-15',\n",
+       "               '2001-12-22', '2001-12-29'],\n",
+       "              dtype='datetime64[ns]', name='date', length=2284, freq=None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Confirm that date values are used for indexing purpose in the CO2 dataset \n",
-    "CO2."
+    "CO2.index"
    ]
   },
   {
