Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
     "CO2_monthly = CO2.resample('M')\n",
     "\n",
     "# Take the mean of each group \n",
-    "CO2_monthly_mean = None\n",
+    "CO2_monthly_mean = CO2_monthly.\n",
     "\n",
     "# Get the first 10 elements of resulting time series\n"
    ]
