--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
    "outputs": [],
    "source": [
     "# Group the time series into monthly buckets\n",
-    "CO2_monthly = CO2.resample('MS')\n",
+    "CO2_monthly = CO2[''].resample('MS')\n",
     "\n",
     "# Take the mean of each group \n",
     "CO2_monthly_mean = CO2_monthly.gr\n",
