--- a/index.ipynb
+++ b/index.ipynb
@@ -398,9 +398,10 @@
     "CO2_monthly = CO2['co2'].resample('MS')\n",
     "\n",
     "# Take the mean of each group \n",
-    "CO2_monthly_mean = CO2_monthly.gr\n",
+    "CO2_monthly_mean = CO2_monthly.mean()\n",
     "\n",
-    "# Get the first 10 elements of resulting time series\n"
+    "# Get the first 10 elements of resulting time series\n",
+    "CO2_monthly_mean."
    ]
   },
   {
