Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
     "CO2_monthly_mean = CO2_monthly.mean()\n",
     "\n",
     "# Get the first 10 elements of resulting time series\n",
-    "CO2_monthly_mean."
+    "CO2_monthly_mean.head(1)"
    ]
   },
   {
