--- a/index.ipynb
+++ b/index.ipynb
@@ -390,9 +390,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1958-03-01    316.100000\n",
+       "1958-04-01    317.200000\n",
+       "1958-05-01    317.433333\n",
+       "1958-06-01           NaN\n",
+       "1958-07-01    315.625000\n",
+       "1958-08-01    314.950000\n",
+       "1958-09-01    313.500000\n",
+       "1958-10-01           NaN\n",
+       "1958-11-01    313.425000\n",
+       "1958-12-01    314.700000\n",
+       "Freq: MS, Name: co2, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Group the time series into monthly buckets\n",
     "CO2_monthly = CO2['co2'].resample('MS')\n",
@@ -401,7 +423,7 @@
     "CO2_monthly_mean = CO2_monthly.mean()\n",
     "\n",
     "# Get the first 10 elements of resulting time series\n",
-    "CO2_monthly_mean.head(1)"
+    "CO2_monthly_mean.head(10)"
    ]
   },
   {
