Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Slice the timeseries to contain data after year 1990 \n"
+    "# Slice the timeseries to contain data after year 1990 \n",
+    "CO2_monthly_mean['19']"
    ]
   },
   {
