Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,12 +439,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1990-01-01    353.650\n",
+       "1990-02-01    354.650\n",
+       "1990-03-01    355.480\n",
+       "1990-04-01    356.175\n",
+       "1990-05-01    357.075\n",
+       "               ...   \n",
+       "2001-08-01    369.425\n",
+       "2001-09-01    367.880\n",
+       "2001-10-01    368.050\n",
+       "2001-11-01    369.375\n",
+       "2001-12-01    371.020\n",
+       "Freq: MS, Name: co2, Length: 144, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slice the timeseries to contain data after year 1990 \n",
-    "CO2_monthly_mean['19']"
+    "CO2_monthly_mean['1990':]"
    ]
   },
   {
