Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve the data between 1st Jan 1990 to 1st Jan 1991\n"
+    "# Retrieve the data between 1st Jan 1990 to 1st Jan 1991\n",
+    "CO2_monthly_mean['']"
    ]
   },
   {
