Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,7 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the total number of missing values in the time series\n"
+    "# Find the total number of missing values in the time series\n",
+    "CO2_monthly_mean"
    ]
   },
   {
