--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Find the total number of missing values in the time series\n",
-    "CO2_monthly_mean"
+    "CO2_monthly_mean.isnull()"
    ]
   },
   {
