Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Find the total number of missing values in the time series\n",
-    "CO2_monthly_mean.isnull()"
+    "CO2_monthly_mean.isnull().sum()"
    ]
   },
   {
