--- a/index.ipynb
+++ b/index.ipynb
@@ -559,7 +559,7 @@
    "outputs": [],
    "source": [
     "# Perform backward filling of missing values\n",
-    "CO2_final = CO2_monthly_mean.fillna\n",
+    "CO2_final = CO2_monthly_mean.fillna('ffill')\n",
     "\n",
     "# Find the total number of missing values in the time series\n"
    ]
