Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -561,7 +561,8 @@
     "# Perform backward filling of missing values\n",
     "CO2_final = CO2_monthly_mean.fillna('ffill')\n",
     "\n",
-    "# Find the total number of missing values in the time series\n"
+    "# Find the total number of missing values in the time series\n",
+    "CO2_final."
    ]
   },
   {
