Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -562,7 +562,7 @@
     "CO2_final = CO2_monthly_mean.fillna('ffill')\n",
     "\n",
     "# Find the total number of missing values in the time series\n",
-    "CO2_final."
+    "CO2_final.isnull().sum()"
    ]
   },
   {
